--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 absl-py==2.2.2
 alembic==1.15.2
+altair==5.5.0
 annotated-types==0.7.0
 anyio==4.9.0
 astunparse==1.6.3
+attrs==25.3.0
 beautifulsoup4==4.13.4
 blinker==1.9.0
 cachetools==5.5.2
@@ -15,6 +17,8 @@ contourpy==1.3.2
 curl_cffi==0.11.1
 cycler==0.12.1
 databricks-cli==0.18.0
+databricks-sdk==0.53.0
+Deprecated==1.2.18
 docker==6.1.3
 entrypoints==0.4
 exceptiongroup==1.3.0
@@ -27,8 +31,11 @@ gast==0.4.0
 gitdb==4.0.12
 GitPython==3.1.44
 google-auth==2.40.1
-google-auth-oauthlib==0.4.6
+google-auth-oauthlib==1.0.0
 google-pasta==0.2.0
+graphene==3.4.3
+graphql-core==3.2.6
+graphql-relay==3.2.0
 greenlet==3.2.2
 grpcio==1.71.0
 gunicorn==20.1.0
@@ -37,40 +44,54 @@ h5py==3.13.0
 idna==3.10
 importlib-metadata==6.11.0
 itsdangerous==2.2.0
+jax==0.4.30
+jaxlib==0.4.30
 Jinja2==3.1.6
 joblib==1.5.0
-keras==2.11.0
+jsonschema==4.23.0
+jsonschema-specifications==2025.4.1
+keras==2.12.0
 kiwisolver==1.4.8
 libclang==18.1.1
 Mako==1.3.10
 Markdown==3.8
 MarkupSafe==3.0.2
 matplotlib==3.10.3
-mlflow==2.3.2
+ml_dtypes==0.5.1
+mlflow==2.22.0
+mlflow-skinny==2.22.0
 multitasking==0.0.11
-numpy==1.26.4
+narwhals==1.39.1
+numpy==1.23.5
 oauthlib==3.2.2
+opentelemetry-api==1.33.1
+opentelemetry-sdk==1.33.1
+opentelemetry-semantic-conventions==0.54b1
 opt_einsum==3.4.0
 packaging==23.2
 pandas==2.2.3
 peewee==3.18.1
 pillow==11.2.1
 platformdirs==4.3.8
-protobuf==3.19.6
+plotly==6.1.0
+protobuf==3.20.3
 pyarrow==11.0.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pycparser==2.22
 pydantic==2.11.4
 pydantic_core==2.33.2
+pydeck==0.9.1
 PyJWT==2.10.1
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 pytz==2023.4
 PyYAML==6.0.2
 querystring-parser==1.2.4
+referencing==0.36.2
 requests==2.32.3
 requests-oauthlib==2.0.0
+rpds-py==0.25.0
 rsa==4.9.1
 scikeras==0.11.0
 scikit-learn==1.6.1
@@ -82,23 +103,28 @@ soupsieve==2.7
 SQLAlchemy==2.0.41
 sqlparse==0.5.3
 starlette==0.46.2
+streamlit==1.45.1
 tabulate==0.9.0
-tensorboard==2.11.2
-tensorboard-data-server==0.6.1
+tenacity==9.1.2
+tensorboard==2.12.3
+tensorboard-data-server==0.7.2
 tensorboard-plugin-wit==1.8.1
-tensorflow==2.11.0
-tensorflow-estimator==2.11.0
+tensorflow==2.12.0
+tensorflow-estimator==2.12.0
 tensorflow-io-gcs-filesystem==0.37.1
 termcolor==3.1.0
 threadpoolctl==3.6.0
+toml==0.10.2
+tornado==6.5
 typing-inspection==0.4.0
 typing_extensions==4.13.2
 tzdata==2025.2
 urllib3==2.4.0
 uvicorn==0.34.2
+watchdog==6.0.0
 websocket-client==1.8.0
 websockets==15.0.1
 Werkzeug==3.1.3
-wrapt==1.17.2
+wrapt==1.14.1
 yfinance==0.2.61
 zipp==3.21.0
